# berry-mcp-anthropic

./: .gitignore  CLAUDE.md  README.md  my_custom_tools.py  pyproject.toml  vscode_mcp_config.json
.github/workflows/: ci.yml
docs/: README.md  TOOL_DEVELOPMENT.md  VSCODE_CONFIGURATION.md
examples/: custom_tools.py  server_usage.py  transport_examples.py  vscode_config_example.json
src/berry_mcp/: __init__.py  __main__.py  server.py
src/berry_mcp/tools/: __init__.py  decorators.py  example_tools.py  pdf_tools.py
src/berry_mcp/utils/: __init__.py  logging.py  validation.py
tests/: test_cli.py  test_decorators.py  test_integration.py  test_logging.py  test_server.py  test_validation.py
